feat: add responseHeaders endpoint to return custom headers from query parameters
