# internal/application/apis/response/routes.go
@@ -6,4 +6,6 @@ func Register(r *rhttp.Router) {
 	r.Get("/cache", cache)
 	r.Get("/cache/:value", setCacheCtrl)
 	r.Get("/etag/:etag", etagHandler)
+	r.Get("/response-headers", responseHeaders)
+	// r.Post("/response-headers", responseHeaders)
 }
